Features section and Download section completed

--- a/assets/index.html
+++ b/assets/index.html
@@ -147,6 +147,96 @@
         </div>
       </div>
     </section>
+
+    <!-- Features section -->
+    <section id="features">
+      <div class="container">
+        <div class="row section-title justify-content-center">
+          <h2 class="section-title-heading">app features</h2>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-4">
+            <div class="feature-block text-center">
+              <i class="fas fa-mobile-alt fa-3x mb-4"></i>
+              <h3>mobile friendly</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur quia impedit praesentium earum qui consequatur.
+                Earum magni veritatis exercitationem nam quos, consectetur,
+                alias neque quo assumenda iste sequi eius qui!
+              </p>
+            </div>
+            <div class="feature-block text-center mt-5">
+              <i class="fas fa-lock fa-3x mb-4"></i>
+              <h3>security</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur quia impedit praesentium earum qui consequatur.
+                Earum magni veritatis exercitationem nam quos, consectetur,
+                alias neque quo assumenda iste sequi eius qui!
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 feature-img">
+            <img
+              class="img-fluid"
+              src="../assets/img/product-2.png"
+              alt="Silver Mobile"
+            />
+          </div>
+          <div class="col-md-4">
+            <div class="feature-block text-center">
+              <i class="far fa-comment-dots fa-3x mb-4"></i>
+              <h3>24/7 support</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur quia impedit praesentium earum qui consequatur.
+                Earum magni veritatis exercitationem nam quos, consectetur,
+                alias neque quo assumenda iste sequi eius qui!
+              </p>
+            </div>
+            <div class="feature-block text-center mt-5">
+              <i class="fas fa-heart fa-3x mb-4"></i>
+              <h3>beautiful design</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur quia impedit praesentium earum qui consequatur.
+                Earum magni veritatis exercitationem nam quos, consectetur,
+                alias neque quo assumenda iste sequi eius qui!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download section -->
+    <section id="download">
+      <div class="container">
+        <div class="row download-title justify-content-center">
+          <h2>download our app</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
+            doloremque, officia voluptas natus praesentium, ipsum est error
+            dolores minus, ratione at repellendus voluptatibus sunt numquam
+            iure. A, perspiciatis alias? Pariatur.
+          </p>
+
+          <div class="download-btns">
+            <a href="" class="btn btn-outline-primary btn-white">
+              <i class="fab fa-apple"></i>
+              app store</a
+            >
+            <a href="" class="btn btn-outline-primary btn-white">
+              <i class="fas fa-play"></i>
+              play store</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- JS Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
