Pricing Plan section completed

--- a/assets/index.html
+++ b/assets/index.html
@@ -237,6 +237,100 @@
       </div>
     </section>
 
+     <!-- Pricing Plans section -->
+    <section id="pricing">
+      <div class="container">
+        <div class="row section-title justify-content-center">
+          <h2 class="section-title-heading">pricing plans</h2>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md pricing-table">
+            <div class="table-header text-center">
+              <h4>basic</h4>
+              <p>$25/month</p>
+            </div>
+
+            <div class="table-content">
+              <ul>
+                <li>
+                  free support
+                </li>
+                <li>
+                  20gb storage
+                </li>
+                <li>
+                  2 users
+                </li>
+                <li>
+                  2 email accounts
+                </li>
+              </ul>
+            </div>
+
+            <div class="table-footer text-center">
+              <a href="#">order now</a>
+            </div>
+          </div>
+
+          <div class="col-md pricing-table">
+            <div class="table-header text-center">
+              <h4>medium</h4>
+              <p>$45/month</p>
+              <img src="../assets/img/sale-badge-128.png" alt="">
+            </div>
+
+            <div class="table-content">
+              <ul>
+                <li>
+                  free support
+                </li>
+                <li>
+                  20gb storage
+                </li>
+                <li>
+                  2 users
+                </li>
+                <li>
+                  2 email accounts
+                </li>
+              </ul>
+            </div>
+
+            <div class="table-footer text-center">
+              <a href="#">order now</a>
+            </div>
+          </div>
+
+          <div class="col-md pricing-table">
+            <div class="table-header text-center">
+              <h4>large</h4>
+              <p>$125/month</p>
+            </div>
+
+            <div class="table-content">
+              <ul>
+                <li>
+                  free support
+                </li>
+                <li>
+                  20gb storage
+                </li>
+                <li>
+                  2 users
+                </li>
+                <li>
+                  2 email accounts
+                </li>
+              </ul>
+            </div>
+
+            <div class="table-footer text-center">
+              <a href="#">order now</a>
+            </div>
+          </div>
+        </div>
+
     <!-- JS Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
