Contact section completed

--- a/assets/index.html
+++ b/assets/index.html
@@ -237,7 +237,7 @@
       </div>
     </section>
 
-     <!-- Pricing Plans section -->
+    <!-- Pricing Plans section -->
     <section id="pricing">
       <div class="container">
         <div class="row section-title justify-content-center">
@@ -253,18 +253,10 @@
 
             <div class="table-content">
               <ul>
-                <li>
-                  free support
-                </li>
-                <li>
-                  20gb storage
-                </li>
-                <li>
-                  2 users
-                </li>
-                <li>
-                  2 email accounts
-                </li>
+                <li>free support</li>
+                <li>20gb storage</li>
+                <li>2 users</li>
+                <li>2 email accounts</li>
               </ul>
             </div>
 
@@ -277,23 +269,15 @@
             <div class="table-header text-center">
               <h4>medium</h4>
               <p>$45/month</p>
-              <img src="../assets/img/sale-badge-128.png" alt="">
+              <img src="../assets/img/sale-badge-128.png" alt="" />
             </div>
 
             <div class="table-content">
               <ul>
-                <li>
-                  free support
-                </li>
-                <li>
-                  20gb storage
-                </li>
-                <li>
-                  2 users
-                </li>
-                <li>
-                  2 email accounts
-                </li>
+                <li>free support</li>
+                <li>20gb storage</li>
+                <li>2 users</li>
+                <li>2 email accounts</li>
               </ul>
             </div>
 
@@ -310,18 +294,10 @@
 
             <div class="table-content">
               <ul>
-                <li>
-                  free support
-                </li>
-                <li>
-                  20gb storage
-                </li>
-                <li>
-                  2 users
-                </li>
-                <li>
-                  2 email accounts
-                </li>
+                <li>free support</li>
+                <li>20gb storage</li>
+                <li>2 users</li>
+                <li>2 email accounts</li>
               </ul>
             </div>
 
@@ -330,6 +306,81 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Contact section -->
+    <section id="contact">
+      <div class="container">
+        <div class="row section-title justify-content-center">
+          <h2 class="section-title-heading">get in touch</h2>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-8">
+            <div class="contact-form">
+              <form action="#">
+                <div class="row">
+                  <div class="col">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Enter your name..."
+                    />
+                  </div>
+                  <div class="col">
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Enter your email address..."
+                    />
+                  </div>
+                </div>
+
+                <div class="form-group mt-4">
+                  <textarea
+                    class="form-control"
+                    name=""
+                    id=""
+                    cols="30"
+                    rows="8"
+                    placeholder="Enter your message..."
+                  ></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-contact mt-4">Send</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="col-md-4 contact-address">
+            <h3>Address</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt
+              quis ad nostrum doloremque suscipit incidunt.
+            </p>
+
+            <div class="contact-details">
+              <ul class="fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fas fa-mobile-alt"></i></span>+1
+                  555 555 555
+                </li>
+                <li>
+                  <span class="fa-li"
+                    ><i class="fas fa-map-marker-alt"></i></span
+                  >99 Gilchrist Road CA 12345
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-paper-plane"></i></span
+                  >info@companyname.com
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- JS Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
