Footer section completed

--- a/assets/index.html
+++ b/assets/index.html
@@ -382,6 +382,30 @@
       </div>
     </section>
 
+    <!-- Footer section -->
+    <footer id="footer">
+      <div class="container">
+        <div class="row d-flex flex-column align-items-center">
+
+          <div class="footer-logo">
+            <img src="../assets/img/CNY_Logo.jpg" alt="CNY Logo" />
+          </div>
+
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+
+          <div class="copyright text-center">
+            <p>Copyright 2021</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- JS Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
