Fixed toggler-icon position on small screen

--- a/assets/index.html
+++ b/assets/index.html
@@ -25,9 +25,9 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <!-- Put all Navbar in container -->
         <div class="container">
-          <!-- Logo -->
+          <!-- Logo -->         
           <a class="navbar-brand" href="#">
-            <img class="logo" src="./img/CNY_Logo.jpg" alt="CNY Logo" />
+            <img class="logo" src="./img/CNY_Logo.jpg" alt="CNY Logo" >
           </a>
 
           <!-- Hamburger icon -->
